@@ -10,8 +10,8 @@ class Post extends AbstractHttpData {
     /**
      * 
      */
-    public function __construct ( ) {
-        
+    public function __construct ( )
+    {
         $this->data = $_POST;
     }
 }
