@@ -20,6 +20,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Changed
 
 - Method AbstractHttpData::get() trims now whitespaces
+- Extend Http\Get from AbstractHttpData
 
 ## 0.0.3
 
